# seld-desktop-app

./: LICENSE  README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
.github/workflows/: main.yml
src/: app.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/css/: main.css
src/components/: Header.vue
src/layouts/: custom.vue
src/middleware/: auth.js
src/pages/: about.vue  devices.vue  index.vue  keys.vue  team.vue
src/store/: authuser.js
